appdatadir= $(madatadir)

appdata_DATA=\
	backup.png\
	backup_gray.png\
	catalogs.png\
	catalogs_gray.png\
	health.png\
	health_gray.png\
	replication.png\
	replication_gray.png\
	restore.png\
	restore_gray.png\
	server_connections.png\
	server_connections_gray.png\
	server_info.png\
	server_info_gray.png\
	server_logs.png\
	server_logs_gray.png\
	service_config.png\
	service_config_gray.png\
	startup_variables.png\
	startup_variables_gray.png\
	user_admin.png\
	user_admin_gray.png

EXTRA_DIR=$(appdata_DATA)

