

commondatadir= $(mydatadir)/grt/db

commondata_DATA=\
	column_256.png\
	column_64.png\
	column_fk_256.png\
	column_fk_64.png\
	column_pk_256.png\
	column_pk_64.png\
	column_pk.png\
	column.png\
	connection_part.png\
	index_64.png\
	routine_64.png\
	routine.png\
	table_64.png\
	table_func_edit_64.png\
	table_func_lock_64.png\
	table_func_menu_64.png\
	view_64.png\
	view.png
